# ncnn-android-piper

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt
